syntax = "proto3";
package com.temas.protocols.benchmark;

message Header {
    int64 seqNum = 1;
    int64 timestamp = 2;
}

message GetUsersRequest {
    Header header = 1;
    int32 count = 2;
}


message User {
    string firstName = 1;
    string secondName = 2;
    string birthdate = 3;
    int32 age = 4;
    string city = 5;
}

message GetUsersResponse {
    Header header = 1;
    repeated User userList = 2;
}